--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
+body {
+  background-image: url("./assets/images/pokemon-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .pokemon-container {
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: 330px 330px 330px;
-	background-color: #f2f2f2;
-	color: #444;
-	padding: 1rem;
-	padding-left: 6rem;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 330px 330px 330px;
+  color: #444;
+}
+
+.white-text {
+  color: white;
 }
